--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
                     <p class="cta-subtitle">
                         Siga a WV & Co. em nossas redes sociais e comece a viver a experiência da alfaiataria moderna.
                     </p>
-                    <a href="https://instagram.com" target="_blank" class="btn btn--secondary btn-cta">
+                    <a href="https://instagram.com/wv_eco/" target="_blank" class="btn btn--secondary btn-cta">
                         <span class="btn-text">Siga-nos no Instagram</span>
                     </a>
                 </div>
@@ -386,7 +386,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p class="footer-text">&copy; 2024 WV & Co. Todos os direitos reservados.</p>
+            <p class="footer-text">&copy; 2025 WV & Co. Todos os direitos reservados.</p>
         </div>
     </footer>
 
