--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WV & Co. | Transformando autoestima através da moda personalizada</title>
+    <link rel="icon" type="image/png" href="assets/favicon.png">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -12,10 +13,7 @@
         <div class="container">
             <div class="header-content">
                 <a href="#" class="logo">
-                    <div class="logo-icon">
-                        <span class="logo-letters">WC</span>
-                    </div>
-                    <span class="logo-text">WV & CO.</span>
+                    <img src="assets/logo.png" alt="WV & Co. Logo" class="logo-img">
                 </a>
                 
                 <nav class="nav-desktop">
@@ -103,7 +101,12 @@
                     
                     <div class="produto-card animate-fade-up" data-category="masculino" style="animation-delay: 0.1s;">
                         <div class="card-header">
-                            <div class="category-icon masculino-icon"><svg ...></svg></div>
+                            <div class="category-icon masculino-icon">
+                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                    <path d="M12 2a10 10 0 1 0 10 10V2z"></path>
+                                    <path d="m16 6-4 4-1.5-1.5"></path>
+                                </svg>
+                            </div>
                             <span class="category-label">Masculino</span>
                         </div>
                         <div class="card-image">
@@ -117,13 +120,27 @@
                         <div class="card-content">
                             <h3 class="card-title">Linha Masculina</h3>
                             <ul class="produtos-list">
-                                </ul>
+                                <li>Camisetas básicas e premium (gola V, careca, slim fit)</li>
+                                <li>Camisas sociais e casuais</li>
+                                <li>Calças chino e alfaiataria</li>
+                                <li>Bermudas e shorts</li>
+                                <li>Moletons e blusas de frio</li>
+                                <li>Blazers e jaquetas leves</li>
+                                <li>Regatas e polos</li>
+                                <li>Cuecas e meias premium</li>
+                                <li>Ternos sob medida</li>
+                            </ul>
                         </div>
                     </div>
 
                     <div class="produto-card animate-fade-up" data-category="feminino" style="animation-delay: 0.2s;">
                         <div class="card-header">
-                            <div class="category-icon feminino-icon"><svg ...></svg></div>
+                            <div class="category-icon feminino-icon">
+                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                    <circle cx="12" cy="8" r="7"></circle>
+                                    <polyline points="8.21,13.89 7,23 17,23 15.79,13.88"></polyline>
+                                </svg>
+                            </div>
                             <span class="category-label">Feminino</span>
                         </div>
                         <div class="card-image">
@@ -137,13 +154,26 @@
                         <div class="card-content">
                             <h3 class="card-title">Linha Feminina</h3>
                             <ul class="produtos-list">
-                                </ul>
+                                <li>T-shirts e croppeds</li>
+                                <li>Camisas femininas e blusas sociais</li>
+                                <li>Calças alfaiataria, pantalonas, saias</li>
+                                <li>Vestidos casuais e de alfaiataria</li>
+                                <li>Moletons e tricôs femininos</li>
+                                <li>Blazers, jaquetas e coletes</li>
+                                <li>Regatas e bodies</li>
+                                <li>Roupas personalizadas sob medida</li>
+                            </ul>
                         </div>
                     </div>
 
                     <div class="produto-card animate-fade-up" data-category="acessorios" style="animation-delay: 0.3s;">
                         <div class="card-header">
-                            <div class="category-icon acessorios-icon"><svg ...></svg></div>
+                            <div class="category-icon acessorios-icon">
+                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                    <circle cx="12" cy="12" r="3"></circle>
+                                    <path d="M12 1v6m0 6v6m11-7h-6m-6 0H1m15.5-6.5l-4.24 4.24M7.76 12.24l-4.24 4.24m12.02-12.02l-4.24 4.24M7.76 7.76L3.52 3.52"></path>
+                                </svg>
+                            </div>
                             <span class="category-label">Acessórios</span>
                         </div>
                         <div class="card-image">
@@ -157,13 +187,29 @@
                         <div class="card-content">
                             <h3 class="card-title">Acessórios Unissex</h3>
                             <ul class="produtos-list">
-                                </ul>
+                                <li>Cintos de couro e tecido</li>
+                                <li>Relógios</li>
+                                <li>Pulseiras e bijuterias finas</li>
+                                <li>Carteiras e porta-cartões</li>
+                                <li>Óculos de sol premium</li>
+                                <li>Gravatas, lenços e suspensórios</li>
+                                <li>Bonés, chapéus e boinas</li>
+                                <li>Bolsas e pastas executivas</li>
+                            </ul>
                         </div>
                     </div>
 
                     <div class="produto-card animate-fade-up" data-category="calcados" style="animation-delay: 0.4s;">
                         <div class="card-header">
-                            <div class="category-icon calcados-icon"><svg ...></svg></div>
+                            <div class="category-icon calcados-icon">
+                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                    <path d="M2 18h1.4c1.3 0 2.5-.6 3.3-1.7l6.1-8.6c.7-1.1 2-1.7 3.3-1.7H22"></path>
+                                    <path d="m18 2 4 4-4 4"></path>
+                                    <path d="M2 6h1.9c1.5 0 2.9.9 3.6 2.2"></path>
+                                    <path d="M22 18h-5.9c-1.3 0-2.6-.7-3.3-1.8l-.5-.8"></path>
+                                    <path d="m18 14 4 4-4 4"></path>
+                                </svg>
+                            </div>
                             <span class="category-label">Calçados</span>
                         </div>
                         <div class="card-image">
@@ -177,13 +223,24 @@
                         <div class="card-content">
                             <h3 class="card-title">Calçados</h3>
                             <ul class="produtos-list">
-                                </ul>
+                                <li>Sapatos sociais e casuais</li>
+                                <li>Tênis estilosos e minimalistas</li>
+                                <li>Mocassins, loafers, botas leves</li>
+                                <li>Sandálias e slides premium</li>
+                            </ul>
                         </div>
                     </div>
 
                     <div class="produto-card animate-fade-up" data-category="kids" style="animation-delay: 0.5s;">
                         <div class="card-header">
-                            <div class="category-icon kids-icon"><svg ...></svg></div>
+                            <div class="category-icon kids-icon">
+                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                    <path d="M9 12h6l-3-3z"></path>
+                                    <path d="m9 21 3-3 3 3"></path>
+                                    <path d="M20 4v7a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V4"></path>
+                                    <path d="M4 4h16"></path>
+                                </svg>
+                            </div>
                             <span class="category-label">Kids</span>
                         </div>
                         <div class="card-image">
@@ -197,13 +254,21 @@
                         <div class="card-content">
                             <h3 class="card-title">Linha Kids</h3>
                             <ul class="produtos-list">
-                                </ul>
+                                <li>Camisetas e moletons infantis personalizados</li>
+                                <li>Camisas kids</li>
+                                <li>Calças e bermudas kids</li>
+                                <li>Acessórios infantis (bonés, cintos, carteiras)</li>
+                            </ul>
                         </div>
                     </div>
 
                     <div class="produto-card produto-card--especial animate-fade-up" data-category="all" style="animation-delay: 0.6s;">
                         <div class="card-header">
-                            <div class="category-icon especiais-icon"><svg ...></svg></div>
+                            <div class="category-icon especiais-icon">
+                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                    <polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"></polygon>
+                                </svg>
+                            </div>
                             <span class="category-label">Exclusivos</span>
                         </div>
                         <div class="card-image">
@@ -217,7 +282,13 @@
                         <div class="card-content">
                             <h3 class="card-title">Diferenciais Especiais</h3>
                             <ul class="produtos-list especiais">
-                                </ul>
+                                <li data-icon="🎯">Personalização sob medida com bordado de iniciais</li>
+                                <li data-icon="✂️">Ajuste de modelagem personalizado</li>
+                                <li data-icon="🎨">Escolha de tecidos e cores exclusivas</li>
+                                <li data-icon="🎁">Kits presentes e combos especiais</li>
+                                <li data-icon="🍂">Produtos sazonais e edições limitadas</li>
+                                <li data-icon="👔">Consultoria de estilo individual</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -225,13 +296,78 @@
         </section>
 
         <section id="diferenciais" class="section diferenciais">
-            </section>
+            <div class="container">
+                <h2 class="section-title section-title--center animate-fade-up">Nossos Diferenciais</h2>
+                <div class="diferenciais-grid">
+                    <div class="diferencial-item animate-scale-up" style="animation-delay: 0.1s;">
+                        <div class="diferencial-icon">
+                            <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path>
+                                <circle cx="12" cy="7" r="4"></circle>
+                            </svg>
+                        </div>
+                        <h3 class="diferencial-title">Atendimento Personalizado</h3>
+                        <p class="diferencial-description">
+                            Uma consultoria dedicada para guiar você na escolha de cada detalhe.
+                        </p>
+                    </div>
+                    <div class="diferencial-item animate-scale-up" style="animation-delay: 0.2s;">
+                        <div class="diferencial-icon">
+                            <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"></polygon>
+                            </svg>
+                        </div>
+                        <h3 class="diferencial-title">Qualidade e Exclusividade</h3>
+                        <p class="diferencial-description">
+                            Luxo acessível, com materiais premium e acabamento artesanal impecável.
+                        </p>
+                    </div>
+                    <div class="diferencial-item animate-scale-up" style="animation-delay: 0.3s;">
+                        <div class="diferencial-icon">
+                            <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <path d="M12 2L2 7v10c0 5.55 3.84 9.74 9 11 5.16-1.26 9-5.45 9-11V7l-10-5z"></path>
+                                <path d="m9 12 2 2 4-4"></path>
+                            </svg>
+                        </div>
+                        <h3 class="diferencial-title">Sob Medida Premium</h3>
+                        <p class="diferencial-description">
+                            Peças únicas criadas especialmente para seu corpo e estilo pessoal.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <section id="valores" class="section valores">
-            </section>
+            <div class="container">
+                <h2 class="section-title section-title--center animate-fade-up">Nossos Valores</h2>
+                <div class="valores-tags animate-fade-up" style="animation-delay: 0.2s;">
+                    <span class="valor-tag">Autenticidade</span>
+                    <span class="valor-tag">Modernidade</span>
+                    <span class="valor-tag">Qualidade</span>
+                    <span class="valor-tag">Inspiração</span>
+                    <span class="valor-tag">Exclusividade</span>
+                    <span class="valor-tag">Inovação</span>
+                </div>
+                <blockquote class="quote animate-fade-up" style="animation-delay: 0.4s;">
+                    "Nossa missão é inspirar você a vestir sua melhor versão todos os dias."
+                </blockquote>
+            </div>
+        </section>
 
         <section id="cta" class="section cta">
-            </section>
+            <div class="container">
+                <div class="cta-content animate-fade-up">
+                    <h2 class="cta-title">Descubra sua nova essência.</h2>
+                    <p class="cta-subtitle">
+                        Siga a WV & Co. em nossas redes sociais e comece a viver a experiência da alfaiataria moderna.
+                    </p>
+                    <a href="https://instagram.com/wv_eco/" target="_blank" class="btn btn--secondary btn-cta">
+                        <span class="btn-text">Siga-nos no Instagram</span>
+                    </a>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer class="footer">
